--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,82 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Logs ###
+*.log
+logs/
+*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+### OS Generated Files ###
+.DS_Store
+Thumbs.db
+ehthumbs.db
+../../../../../../Desktop/desktop.ini
+
+### Environment Variables ###
+.env
+.env.local
+.env.*.local
+.env.example
+
+### Python ###
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+
+### Node Modules ###
+node_modules/
+
+### Compiled Files ###
+*.out
+*.class
+*.exe
+*.dll
+*.so
+*.o
+*.a
+*.bin
+*.lib
+*.pdb
+
+### Archives ###
+*.zip
+*.tar
+*.tgz
+*.gz
+*.7z
+*.rar
+
+### Temporary Files ###
+*.tmp
+*.temp
+*.swp
+*.bak
+*.seed
+*.pid
+*.pid.lock
+
+### Coverage Reports ###
+coverage/
+.nyc_output/
+coverage-final.json
+
+### Miscellaneous ###
+*.cache
+*.swp
+*.swo
+*.bak
+*.log
+*.gz
+*.sql
+*.sqlite
+*.sqlite3
+
+### Debugging ###
+debug/
+.idea_modules/
