--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=api
+
+# Banco de Dados
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.dialect=${DB_DIALECT}
+
+# Configurações de JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configurações de JWT
+jwt.secret=${JWT_SECRET_KEY}
+jwt.issuer=${JWT_ISSUER}
+jwt.audience=${JWT_AUDIENCE}
+
+# Porta do Servidor
+server.port=${PORT}
