--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,11 @@
 			<artifactId>argon2-jvm</artifactId>
 			<version>2.10</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
